refactor: Замена колеса эмоций на селектор настроения в профиле
- Удалено колесо эмоций из навигации
- Добавлено отслеживание настроения в профиль
- Очищены неиспользуемые файлы и ресурсы
- Сохранена функциональность статистики эмоций

Signed-off-by: master <illyablagun@gmail.com>

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,8 +1,8 @@
 {
   "theme": "dark",
-  "window_width": 875,
-  "window_height": 1062,
+  "window_width": 1125,
+  "window_height": 812,
   "animations_enabled": true,
   "auto_save": true,
-  "ai_api_key": ""
+  "groq_api_key": "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"
 }
