--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,4 @@ customtkinter>=5.2.0
 
 # Дополнительные зависимости для разработки (опционально)
 # pillow>=10.0.0  # для работы с изображениями (если потребуется)
-# requests>=2.31.0  # для HTTP запросов (для будущих функций)
+requests>=2.31.0  # для AI ассистента (Groq API)
