--- a/config/settings.json
+++ b/config/settings.json
@@ -4,5 +4,5 @@
   "window_height": 812,
   "animations_enabled": true,
   "auto_save": true,
-  "groq_api_key": "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"
+  "groq_api_key": ""
 }
